tests/pp-fail/error_directive_eof.fl.0.exp
Error: error_directive_eof.fl(1,1): Unexpected end of token stream
\error
^      
